service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name zotero-webdav
spec:
  selector:
    app: *name
  ports:
    - protocol: TCP
      port: 80
